Fixed the button-icons alignment.
Added CSS to adjust the button icons.

Bug: T270403

--- a/src/App.css
+++ b/src/App.css
@@ -208,3 +208,7 @@ body {
     margin-top: 10px;
   }
 }
+
+.anticon {
+  vertical-align: 1px!important; 
+}
